Info antes do rodape

--- a/start.html
+++ b/start.html
@@ -9,7 +9,7 @@
 	<h2>Meu Terceiro Commit</h2>
 
 	<a href="#botão">Meu Botão</a>
-	
+	<h3> Antes do rodape</h3>
 	<h4>Este site foi criado para estudo</h4>
 </body>
 </html>
